--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "masbug/flysystem-google-drive-ext": "^2.3",
         "spatie/laravel-backup": "^8.8"
     },
     "require-dev": {
