--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u927616680_pdrrmozambales
+DB_USERNAME=u927616680_pdrrmozam
+DB_PASSWORD=@Jlencina30
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,13 +29,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=lemueldev2023@gmail.com
+MAIL_PASSWORD=ycxufdlfmgapoonu
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="pdrrmozambales@gmail.com"
+MAIL_FROM_NAME="PDRRMO-ZAMBALES"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
